--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,12 @@ dependencies:
   flutter_svg:
   google_fonts:
   google_maps_flutter: ^2.12.2
-  geolocator: ^12.0.0
-  geocoding_resolver: ^0.0.3+2
   firebase_storage: ^12.3.6
   image_picker: ^1.0.4
   provider: ^6.1.5+1
   google_ml_kit: ^0.20.0
   flutter_gemini: ^3.0.0
+  firebase_ai:
 
 dev_dependencies:
   flutter_test:
